[package]
name = "minecraft-server-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
regex = "1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.164"
subprocess = "0.2.9"
tokio = "1.28.2"
